take 4 on fixing the bottom margin in the illustration page on mobile devices which now broke the column count of the illustrations

--- a/src/index.css
+++ b/src/index.css
@@ -261,7 +261,6 @@ footer p {
   margin-right: 5%;
   margin-left: 5%;
   margin-bottom: 2%;
-
 }
 
 .illustration-container .illustration-gallery {
@@ -442,19 +441,23 @@ footer p {
     padding: 0px;
   }
   .illustration-gallery {
+    margin-bottom: 0 !important;
+    padding: 5px;
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
-    padding: 5px;
-    margin-bottom: 0 !important;
+
+    -webkit-column-width: 150px;
+    -moz-column-width: 150px;
+    column-width: 150px;
 
     -webkit-column-fill: auto;
     -moz-column-fill: auto;
     column-fill: auto;
   }
   .illustration-container .illustration-gallery {
-  margin-bottom: 0px;
-}
+    margin-bottom: 0px;
+  }
   #business-inquiries {
     margin: auto;
     margin-bottom: 10%;
